# Mechanic

./: .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-content.md  README.md
data/: curation-raw.json
docs/: architecture.md  authoring-things.md  data-provenance.md  roadmap.md
pipeline/: pyproject.toml
pipeline/src/mech_pipeline/: __init__.py  compile.py  dims.py  emit_js.py  ingest.py  kinds.py  verify.py
pipeline/tests/: test_beam_physics.py  test_bearing_physics.py  test_belt_physics.py  test_boltedjoint_physics.py  test_branches.py  test_clutch_physics.py  test_column_physics.py  test_combined_physics.py  test_compile_e2e.py  test_composite_physics.py  test_config_guards.py  test_curved_beam_physics.py  test_cylinder_physics.py  test_default_materials.py  test_dims.py  test_disk_physics.py  test_eccentric_physics.py  test_emit.py  test_fixedfixed_beam_physics.py  test_fixedfixed_shaft_physics.py  test_flywheel_physics.py  test_flywheel_spinup_physics.py  test_fourbar_physics.py  test_gear_physics.py  test_impact_loading_physics.py  test_ingest.py  test_material_slots.py  test_motor_physics.py  test_physics_coverage.py  test_planetary_physics.py  test_plate_physics.py  test_powerscrew_physics.py  test_propped_physics.py  test_rect_torsion_physics.py  test_shaft_critical_speed_physics.py  test_shaft_physics.py  test_shear_flow_physics.py  test_shrinkfit_physics.py  test_slider_crank_physics.py  test_solve1d.py  (+11 more)
site/: astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
site/src/lib/: url.ts  (+3 more)
(+274 files in other folders)
