[project]
name = "mech-pipeline"
version = "0.1.0"
description = "Build-time math pipeline: verifies THING relations/derivations and emits TS + JSON artifacts"
requires-python = ">=3.13"
dependencies = [
    "sympy==1.14.0",
    "pyyaml>=6.0",
]

[project.scripts]
compile-things = "mech_pipeline.compile:main"
ingest-materials = "mech_pipeline.ingest:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mech_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
